# movedata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/movedata_gui/: main.py
src/movedata_gui/ui/: main_window.py
tests/: conftest.py  test_main_window.py
